--- a/home/index.html
+++ b/home/index.html
@@ -492,7 +492,7 @@
     <br/>
 </span>
 <span class="left-col">
-    I am a quantitative methodologist with a focus on interdisciplinary research. My doctoral studies are in quantitative psychology with an emphasis on integrating network science with psychometric frameworks. I focused on social network analysis while completing my M.Sc.in Statistics, and on psychometric principles and models during my Ph.D. in quantitative psychology. I develop statistical models for high-dimensional networks, multivariate datasets, and Big Data online networks and address research questions across multiple disciplines with focuses in psychology, education and political science. 
+    I am a postdoctoral associate at Yale University. I have published in both methodology and application journals including <em>Psychometrika</em>, <em>Journal of Complex Networks</em> and <em>Behavior Research Methods</em>. My methodology research focus on high-dimensional networks, multivariate analysis, and latent variable models with specializations in neuroimaging data and social and political networks. 
     <br/>
     <br/>
     Researchers interested in collaborative works should email me at <a href="mailto: selena.wang@yale.edu">selena.wang@yale.edu</a>
