--- a/publications/index.html
+++ b/publications/index.html
@@ -510,7 +510,7 @@
   <h1>Publications</h1>
 
 <h2 id="peer-reviewed-publications">Peer-reviewed Publications</h2>
-<p>To view a current list of my publications, please see the <a href="/publications/CV_2024.pdf" target="_blank">CV</a>. </p>
+<p>To view a current list of my publications, please see the <a href="CV_2024.pdf" target="_blank">CV</a>. </p>
 <h2 id="posters-presentations">Posters &amp; Presentations</h2>
 <h3 id="networks">Networks</h3>
 <ul>
