--- a/publications/index 3.html
+++ b/publications/index 3.html
@@ -512,7 +512,7 @@
   <h1>Publications</h1>
 
 <h2 id="peer-reviewed-publications">Peer-reviewed Publications</h2>
-<p><a href="/CV_2024.pdf" target="_blank">CV</a></p>
+<p><a href="/publications/CV_2024.pdf" target="_blank">CV</a></p>
 
 
 
