--- a/students/index 2.html
+++ b/students/index 2.html
@@ -530,15 +530,15 @@
 <li>Proficiency in applying quantitative methods, machine learning, and related areas.  </li>
 <li>Skilled in programming and/or statistical method development.  </li>
 </ol>
-<p>If you are interested in joining my lab, please email me the following documents with the subject “Prospective Ph.D. student for Network Neuroscience Lab”:  </p>
+<p>If you are interested in joining my lab, please <a href="mailto:selewang@iu.edu">email me</a> the following documents with the subject “Prospective student for Network Neuroscience Lab”:  </p>
 <ol>
 <li>Your CV</li>
 <li>A brief description of your background and interest</li>
 </ol>
 <h3 id="application-process">Application Process:</h3>
-<p>Apply to the Department of Biostatistics and Health Data Science at Indiana University School of Medicine. When applying, be sure to specify your interest in working with us by mentioning my name from the faculty member list.</p>
+<p>Apply to the Department of Biostatistics and Health Data Science at Indiana University School of Medicine. When applying, be sure to specify your interest in working with us by mentioning my name from the faculty member list. More information <a href="https://medicine.iu.edu/biostatistics/education/graduate-degrees" target="_blank">here</a>.</p>
 <h3 id="current-indiana-students">Current Indiana Students:</h3>
-<p>If you are a current Indiana master or undergraduate student interested in working with me, please send me an email with your CV/resume and a brief description of your background and interest. Funding availability may vary and cannot be guaranteed for all applicants. Graduate Research Assistantships (GRAs) are typically extended to individuals who are actively engaged in a research project within our team.</p>
+<p>If you are a current Indiana master or undergraduate student interested in working with me, please send me an <a href="mailto:selewang@iu.edu">email</a> with your CV/resume and a brief description of your background and interest. Funding availability may vary and cannot be guaranteed for all applicants. Graduate Research Assistantships (GRAs) are typically extended to individuals who are actively engaged in a research project within our team.</p>
 
 
 
