--- a/students/index.html
+++ b/students/index.html
@@ -523,14 +523,14 @@
 
 
 <h1 id="prospective-students">Prospective Students</h1>
-<p>(2024) I am looking for highly motivated students with background in biostatistics, computational neuroscience, quantitative psychology, or computer science to join my lab! </p>
+<p>(2024) I am looking for motivated students to contribute to complex networks and systems research to investigate biomedical complexity at the SWLab. The newly established SWLab is affiliated with  <a href="https://medicine.iu.edu/biostatistics" target="_blank"> the department of biostatistics and health data science at IU School of Medicine</a>. The lab focuses on applying and developing scalable statistical and computational approaches for high-dimensional biomedical data with emphases on network science, high dimensional data analysis, neuroimaging, data integration and statistical machine learning.  </p>
 <p>If you possess ANY of the following qualifications, I strongly encourage you to consider applying:  </p>
 <ol>
 <li>Have a background or prior experience in neuroimaging, network analysis, or computational neuroscience.</li>
 <li>Proficiency in applying quantitative methods, machine learning, and related areas.  </li>
 <li>Skilled in programming and/or statistical method development.  </li>
 </ol>
-<p>If you are interested in joining my lab, please <a href="mailto:selewang@iu.edu">email me</a> the following documents with the subject “Prospective student for Network Neuroscience Lab”:  </p>
+<p>If you are interested in joining my lab, please <a href="mailto:selewang@iu.edu">email me</a> the following documents with the subject “Prospective student for SWLab Lab”:  </p>
 <ol>
 <li>Your CV</li>
 <li>A brief description of your background and interest</li>
@@ -538,7 +538,7 @@
 <h3 id="application-process">Application Process:</h3>
 <p>Apply to the Department of Biostatistics and Health Data Science at Indiana University School of Medicine. When applying, be sure to specify your interest in working with us by mentioning my name from the faculty member list. More information <a href="https://medicine.iu.edu/biostatistics/education/graduate-degrees" target="_blank">here</a>.</p>
 <h3 id="current-indiana-students">Current Indiana Students:</h3>
-<p>If you are a current Indiana master or undergraduate student interested in working with me, please send me an <a href="mailto:selewang@iu.edu">email</a> with your CV/resume and a brief description of your background and interest. Funding availability may vary and cannot be guaranteed for all applicants. Graduate Research Assistantships (GRAs) are typically extended to individuals who are actively engaged in a research project within our team.</p>
+<p>If you are a current Indiana master or undergraduate student interested in working with me, please send me an <a href="mailto:selewang@iu.edu">email</a> with your CV/resume and a brief description of your background and interest. Funding availability may vary and cannot be guaranteed for all applicants. Research Assistantships (RAs) are typically extended to individuals who are actively engaged in a research project within our team.</p>
 
 
 
