--- a/students/index.html
+++ b/students/index.html
@@ -523,7 +523,7 @@
 
 
 <h1 id="prospective-students">Prospective Students</h1>
-<p>(2024) I am looking for motivated students to contribute to complex networks and systems research to investigate biomedical complexity at the SWLab. The newly established SWLab is affiliated with  <a href="https://medicine.iu.edu/biostatistics" target="_blank"> the department of biostatistics and health data science at IU School of Medicine</a>. The lab focuses on applying and developing scalable statistical and computational approaches for high-dimensional biomedical data with emphases on network science, high dimensional data analysis, neuroimaging, data integration and statistical machine learning.  </p>
+<p>(2024) I am looking for motivated students to contribute to complex networks and systems research to investigate biomedical complexity at the SWLab. The newly established SWLab is affiliated with  <a href="https://medicine.iu.edu/biostatistics" target="_blank"> the department of biostatistics and health data science at IU School of Medicine</a>. The lab focuses on applying and developing scalable statistical and computational approaches for high-dimensional biomedical data with emphases on network science, high dimensional data analysis, neuroimaging, data integration and statistical machine learning. Depending on prior experiences, selected candidates will have the opportunity to contribute to substantive neuroscience research, method innovations or software development and documentation. </p>
 <p>If you possess ANY of the following qualifications, I strongly encourage you to consider applying:  </p>
 <ol>
 <li>Have a background or prior experience in neuroimaging, network analysis, or computational neuroscience.</li>
