--- a/index.html
+++ b/index.html
@@ -571,12 +571,13 @@
     <br/></p>
 <p></span></p>
 <h2 id="news">News:</h2>
+<p>(November, 2024) New paper is published at <a href="https://alz-journals.onlinelibrary.wiley.com/doi/full/10.1002/alz.14266" target="_blank">Alzheimer's &amp; Dementia</a>.  </p>
+<p>(November, 2024) Xinzhi's first-author preprint is out <a href="https://arxiv.org/abs/2411.01092" target="_blank">Cost efficiency of fMRI studies using resting-state vs task-based functional connectivity</a>. Congrats!</p>
 <p>(October, 2024) Plamena presented poster at 2024 IADRC Fall Research Symposium titled "The Relationship Between Tau Levels in Functionally Connected Cortical Brain Regions and a Region’s Tau Burden". Great Job!</p>
 <p>(October, 2024) New network science review preprint is out <a href="https://arxiv.org/abs/2410.00301" target="_blank">Network Science in Psychology</a>.  </p>
 <p>(October, 2024) New social network method preprint is out <a href="https://arxiv.org/abs/2409.19400" target="_blank">The co-varying ties between networks and item responses via latent variables</a>.  </p>
-<p>(September, 2024) New paper is accepted at <a href="https://osf.io/preprints/psyarxiv/r675z" target="_blank">Alzheimer's &amp; Dementia</a>.  </p>
 <p>(August, 2024) New paper is published at <a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841524002342." target="_blank">Medical Image Analysis</a>.  </p>
-<p>(August, 2024) Selena presented poster <a href="images/poster1.pdf" target="_blank">Sex-specific topological structure associated with dementia identified via latent space network analysis</a> at <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>.  </p>
+<p>(August, 2024) Dr. Wang presented poster <a href="images/poster1.pdf" target="_blank">Sex-specific topological structure associated with dementia identified via latent space network analysis</a> at <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>.  </p>
 
 
 
