--- a/students/index.html
+++ b/students/index.html
@@ -574,7 +574,7 @@
 <h3 id="application-process">Application Process:</h3>
 <p>Apply to the Department of Biostatistics and Health Data Science at Indiana University School of Medicine. When applying, be sure to specify your interest in working with us by mentioning my name from the faculty member list. More information <a href="https://medicine.iu.edu/biostatistics/education/graduate-degrees" target="_blank">here</a>.</p>
 <h3 id="current-indiana-students">Current Indiana Students:</h3>
-<p>If you are a current Indiana PhD or master student interested in working with me, please send me an <a href="mailto:selewang@iu.edu">email</a> with your CV/resume and a brief description of your background and interest. I am interested in students who want to pursue PhD education and/or have academic interest. Funding availability may vary and cannot be guaranteed for all applicants. Research Assistantships (RAs) are typically extended to individuals who can contribute to research publications and will be evaluated on a semester by semester basis.</p>
+<p>If you are a current Indiana student interested in working with me, please send me an <a href="mailto:selewang@iu.edu">email</a> with your CV/resume and a brief description of your background and interest. I am interested in students who want to pursue PhD education. Funding availability may vary and cannot be guaranteed for all applicants. </p>
 
 
 
