--- a/index.html
+++ b/index.html
@@ -571,6 +571,11 @@
     <br/></p>
 <p></span></p>
 <h2 id="news">News:</h2>
+<p>(January, 2025) Connor, Theynaesh and Plamena have each submitted a first-author abstract to <a href="https://aaic.alz.org" target="_blank">AAIC 2025</a>. Congrats! </p>
+<p>(January, 2025) Visiting students Snehal Adabala and Yumeng Chen have joined our lab! </p>
+<p>(January, 2025) Dr. Wang is selected as a <a href="https://medicine.iu.edu/research-centers/alzheimers/for-researchers/funding/rec-scholar-program" target="_blank">2025 REC scholar</a>. </p>
+<p>(January, 2025) We received funding to support methodology development from the REC scholar program via NIA and <a href="https://medicine.iu.edu/research-centers/alzheimers" target="_blank">IADRC</a>. </p>
+<p>(January, 2025) New network science method review paper is accepted at <a href="https://arxiv.org/abs/2410.00301" target="_blank">Psychological Methods</a>.  </p>
 <p>(November, 2024) New paper is published at <a href="https://alz-journals.onlinelibrary.wiley.com/doi/full/10.1002/alz.14266" target="_blank">Alzheimer's &amp; Dementia</a>.  </p>
 <p>(November, 2024) Xinzhi's first-author preprint is out <a href="https://arxiv.org/abs/2411.01092" target="_blank">Cost efficiency of fMRI studies using resting-state vs task-based functional connectivity</a>. Congrats!</p>
 <p>(October, 2024) Plamena presented poster at 2024 IADRC Fall Research Symposium titled "The Relationship Between Tau Levels in Functionally Connected Cortical Brain Regions and a Region’s Tau Burden". Great Job!</p>
