--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
     <br/></p>
 <p></span></p>
 <h2 id="news">News:</h2>
-<p>(January, 2025) Connor, Theynaesh and Plamena have each submitted a first-author abstract to <a href="https://aaic.alz.org" target="_blank">AAIC 2025</a>. Congrats! </p>
+<p>(January, 2025) Connor, Theyanesh and Plamena have each submitted a first-author abstract to <a href="https://aaic.alz.org" target="_blank">AAIC 2025</a>. Congrats! </p>
 <p>(January, 2025) Visiting students Snehal Adabala and Yumeng Chen have joined our lab! </p>
 <p>(January, 2025) Dr. Wang is selected as a <a href="https://medicine.iu.edu/research-centers/alzheimers/for-researchers/funding/rec-scholar-program" target="_blank">2025 REC scholar</a>. </p>
 <p>(January, 2025) We received funding to support methodology development from the REC scholar program via NIA and <a href="https://medicine.iu.edu/research-centers/alzheimers" target="_blank">IADRC</a>. </p>
