--- a/index.html
+++ b/index.html
@@ -571,11 +571,24 @@
     <br/></p>
 <p></span></p>
 <h2 id="news">News:</h2>
-<p>(February, 2025) Drs <a href="https://scholar.google.com/citations?user=Q3x0bgEAAAAJ&hl=en" target="_blank">Hongshan Liu</a> and Krishnendu Chandra will join our team as postdocs in April and May 2025. Welcome!</p>
+<p>(August, 2025) Dr Krishnendu Chandra has joined our team as postdoc in August 2025. Welcome!</p>
+<p>(July, 2025) Our paper <a href="https://arxiv.org/abs/2309.11349" target="_blank">Neuroimaging connectivity analysis needs network science for
+brain-behavior linking </a> has been accepted in <a href="https://www.nature.com/nmeth/" target="_blank">Nature Methods </a>. Congrats!</p>
+<p>(August, 2024) Connor presented poster <a href="images/connor_AAICPoster.pdf" target="_blank">Sex differences in structural connectivity-based AD
+pathology in the Indiana Memory and Aging cohort</a> at <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>. </p>
+<p>(August, 2024) Theyanesh presented poster <a href="images/the_poster.pdf" target="_blank">Deep Learning Framework for Characterizing Tau-PET Heterogeneity and Exploring Functional Connectivity in
+Alzheimer’s Disease: A Self-supervised Approach</a> at <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>. </p>
+<p>(June, 2025) Xinzhi's first author manuscript <a href="https://doi.org/10.1002/hbm.70260" target="_blank">Cost efficiency of fMRI studies using resting-state vs task-based functional connectivity </a> has been published in Human Brain Mapping. Congrats!</p>
+<p>(June, 2025) Congratulations to Connor who has been offered the competitive <a href="https://medicine.iu.edu/research-centers/computational-biology-bioinformatics/education/genomics-research-training" target="_blank">INGEN4DS fellowship</a>! great job!</p>
+<p>(May, 2025) Dr <a href="https://scholar.google.com/citations?user=Q3x0bgEAAAAJ&hl=en" target="_blank">Hongshan Liu</a> has joined our team as a postdoc in May 2025. Welcome!</p>
+<p>(May, 2025) Huairui Wang, Ash Sharma and Anastasija Naumoski have joined our team as graduate research interns beginning summer, 2025. Welcome!</p>
+<p>(May, 2025) Congratulations to Xinzhi Zhang who has accepted an offer from NYU to start her PhD! Well deserved!</p>
+<p>(April, 2025) Theyanesh has been awarded the 2025 AAIC conference fellowship award! Congrats!</p>
+<p>(January, 2025) New network science method review paper is published at <a href="https://psycnet.apa.org/record/2025-87910-001" target="_blank">Psychological Methods</a>. </p>
 <p>(February, 2025) Our team has been offered funding from  <a href="https://www.alzheimersdata.org" target="_blank">Alzheimer's Disease Data Initiative</a> to support Artificial Intelligence technology development for AD. </p>
 <p>(February, 2025) Dr. Wang is selected as a <a href="https://www.alzheimersdata.org/fellows" target="_blank">2025 William H. Gates Sr. Fellow</a>. </p>
 <p>(January, 2025) Connor, Theyanesh and Plamena have each submitted a first-author abstract to <a href="https://aaic.alz.org" target="_blank">AAIC 2025</a>. Congrats! </p>
-<p>(January, 2025) Visiting students Snehal Adabala and Yumeng Chen have joined our lab. Welcome!</p>
+<p>(January, 2025) Visiting student Yumeng Chen have joined our lab. Welcome!</p>
 <p>(January, 2025) Dr. Wang is selected as a <a href="https://medicine.iu.edu/research-centers/alzheimers/for-researchers/funding/rec-scholar-program" target="_blank">2025 REC scholar</a>. </p>
 <p>(January, 2025) We received internal IU funding to support methodology development from the REC scholar program via <a href="https://medicine.iu.edu/research-centers/alzheimers" target="_blank">IADRC</a>. </p>
 <p>(January, 2025) New network science method review paper is accepted at <a href="https://arxiv.org/abs/2410.00301" target="_blank">Psychological Methods</a>.  </p>
