--- a/lab/index.html
+++ b/lab/index.html
@@ -506,10 +506,10 @@
 
 <table style='border: 0px'> 
     <tr> 
-        <td style='width: 60%'> <table style='border: 0px'><tr><th>Plamena Powla</th></tr>
-        <tr><td>Plamena is a PhD student at the SWLab working on projects related to tau neurofibrillary tangles in cortical brain regions and how their levels are affected by structural and functional connections within and between brain systems. She received her undergraduate degree in Psychology from the University of Rochester (‘21) and an M.S. degree in Biostatistics with a concentration in Statistical Bioinformatics from Northwestern University (’22). Her applied research background is in predictive models, causal inference, and survival analysis. In her free time, she enjoys jet skiing, kayaking, and spending time with her pet Leopard tortoise named Strawberry. </td></tr>
+        <td style='width: 60%'> <table style='border: 0px'><tr><th>Hongshan Liu</th></tr>
+        <tr><td>Dr. Liu earned her Ph.D. in Biomedical Engineering from Stevens Institute of Technology. Currently, She’m developing AI methods to advance brain science and medical informatics. Looking ahead, She aims to design interpretable methodologies that uncover deeper insights across these domains.</td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/Plamena.png" style='height: 300px'></td>
+         <td style='text-align: right'><img src="../images/hongshan.jpg" style='height: 300px'></td>
     </tr>
     <tr> 
         <td> <table style='border: 0px'><tr><th>Theyanesh Jayaprakash</th></tr>
@@ -522,6 +522,30 @@
         <tr><td>Connor Cornelison is a first-year Data Science MS student at IU Bloomington, holding an undergraduate degree in Computer Science from Indiana University South Bend. He is currently researching sex-specific imaging biomarkers for Alzheimer's Disease, modeling using the ABC model. He plans to pursue a career in scientific computing, with a focus on AI-powered data processing. </td></tr>
          </table></td>
          <td style='text-align: right'><img src="../images/connor.jpg" style='height: 350px'></td>
+    </tr>
+    <tr> 
+        <td> <table style='border: 0px'><tr><th>Huairui Wang</th></tr>
+        <tr><td>Huairui has a background in statistics, with a BSc from the University of Nottingham and is currently pursuing my MS in Applied Statistics at NYU. He is currently involved in research applying statistical network models to study age-related changes in brain connectivity across the human lifespan. In the future, he plans to pursue a PhD in statistics or biostatistics and continue conducting research at the intersection of health and high-dimensional data analysis. </td></tr>
+         </table></td>
+         <td style='text-align: right'><img src="../images/huairui.JPG" style='height: 350px'></td>
+    </tr>
+      <tr> 
+        <td> <table style='border: 0px'><tr><th>Luling Zou</th></tr>
+        <tr><td>Luling is a second-year M.S. student in Biostatistics at Indiana University Bloomington, holding a B.S. in Applied Mathematics from Shanghai University. She is currently studying the spread of tau pathology across functional brain networks in Alzheimer’s disease by integrating PET imaging data with functional connectivity fMRI matrices, using co-evolution models to explore the interactions. She hopes to apply mathematical and statistical modeling, particularly subgraph detection techniques to problems in health research, with a focus on Alzheimer’s disease and autism spectrum disorders, and plans to pursue a career in academia. </td></tr>
+         </table></td>
+         <td style='text-align: right'><img src="../images/luling.JPG" style='height: 350px'></td>
+    </tr>
+      <tr> 
+        <td> <table style='border: 0px'><tr><th>Yumeng Chen</th></tr>
+        <tr><td>Yumeng have a background in biomedical engineering with research experience spanning neural interfaces, medical imaging, and computational biology. She is working on brain connectivity modeling and AI-based medical analysis. In the future, She hopes to pursue a PhD and develop intelligent medical technologies that support early diagnosis and personalized treatment for neurological and psychiatric disorders. </td></tr>
+         </table></td>
+         <td style='text-align: right'><img src="../images/yumeng.jpeg" style='height: 350px'></td>
+    </tr>
+      <tr> 
+        <td> <table style='border: 0px'><tr><th>Anastasija Naumoski</th></tr>
+        <tr><td>She holds a Bachelor of Science in Human Biology from Indiana University Bloomington and am currently entering her second year as a Master’s student in Bioinformatics at Indiana University Indianapolis. After completing my graduate studies, she plans to pursue a career as a clinical bioinformatician, where she can apply my training to support precision medicine and improve patient outcomes. </td></tr>
+         </table></td>
+         <td style='text-align: right'><img src="../images/ana.jpg" style='height: 350px'></td>
     </tr>
 </table>
 
