--- a/research/index.html
+++ b/research/index.html
@@ -614,16 +614,18 @@ model real-world networks with statistically sound principles and methods—redu
 and controlled type I errors. I am particularly interested in the topological structures of networks
 and the roles they play in (neuro)degeneration, (neuro)development and resilience. </p>
 <h2 id="brain-networks">Brain Networks</h2>
+<p>Zhang, X., Hulvershorn, L. A., Constable, T., Zhao, Y., &amp; Wang, S. (2025). Cost Efficiency of fMRI Studies Using Resting‐State Vs. Task‐Based Functional Connectivity. Human Brain Mapping, 46(9), e70260.</p>
 <p>Wang, S., Wang, Y., Xu, F., Tian, X., Fredericks, C., Shen, L., Zhao, Y., &amp; Alzheimer’s Disease Neuroimaging Initiative (In press). Sex-specific topological structure associated with dementia via latent space estimation. Alzheimer's &amp; Dementia, in press.</p>
 <p>Tian, X., Wang, Y., Wang, S., Zhao, Y., &amp; Zhao, Y. (2024). Bayesian mixed model inference for genetic
 association under related samples with brain network phenotype. Biostatistics, in press.     </p>
-<p>Wang, S., Liu, Y., Xu, W., Tian, X., &amp; Zhao, Y. (2023). Inference-based statistical network analysis uncovers star-like brain functional architectures for internalizing psychopathology in children. arXiv preprint arXiv:2309.11349.    </p>
+<p>Wang, S., Zhang, X., Liu, Y., Xu, W., Tian, X., &amp; Zhao, Y. (2025). Neuroimaging connectivity analysis needs network science for
+brain-behavior linking. Nature Methods, in press.    </p>
 <p>Wang, S., Wang, Y., Xu, F. H., Shen, L., Zhao, Y., &amp; Alzheimer’s Disease Neuroimaging Initiative. (2025). Establishing group-level brain structural connectivity incorporating anatomical knowledge under latent space modeling. Medical Image Analysis, 99, 103309.</p>
 <h2 id="social-networks">Social Networks</h2>
 <p>Wang, S., Powla, P., Sweet, T., &amp; Paul, S. (2024). The co-varying ties between networks and item responses via latent variables. arXiv preprint arXiv:2409.19400.     </p>
 <p>Wang, S., Paul, S., &amp; De Boeck, P. (2023). Joint latent space model for social networks with
 multivariate attributes. Psychometrika, 1–31.   </p>
-<p>Sweet, T., &amp; Wang, S. (2024). Network Science in Psychology. arXiv preprint arXiv:2410.00301.</p>
+<p>Sweet, T., &amp; Wang, S. (2024). Network Science in Psychology. Psychological Methods, in press. </p>
 <h2 id="bipartite-networks-multivariate-and-psychometric-analysis">Bipartite Networks, Multivariate and <a href="https://www.psychometricsociety.org/what-psychometrics" target="_blank">Psychometric Analysis</a></h2>
 <p>Wang, S, &amp; Edgerton, J. (2022). Resilience to stress in bipartite networks: application to the islamic
 state recruitment network. Journal of Complex Networks, 10(4), cnac017.   </p>
