--- a/lab/index 2.html
+++ b/lab/index 2.html
@@ -506,16 +506,10 @@
 
 <table style='border: 0px'> 
     <tr> 
-        <td style='width: 60%'> <table style='border: 0px'><tr><th>Dr. Hongshan Liu</th></tr>
+        <td style='width: 60%'> <table style='border: 0px'><tr><th>Hongshan Liu</th></tr>
         <tr><td>Dr. Liu earned her Ph.D. in Biomedical Engineering from Stevens Institute of Technology. Currently, She’m developing AI methods to advance brain science and medical informatics. Looking ahead, She aims to design interpretable methodologies that uncover deeper insights across these domains.</td></tr>
          </table></td>
          <td style='text-align: right'><img src="../images/hongshan.jpg" style='height: 300px'></td>
-    </tr>
-    <tr> 
-        <td style='width: 60%'> <table style='border: 0px'><tr><th>Dr. Krishnendu Chandra</th></tr>
-        <tr><td>Dr. Krishnendu Chandra received his M.Phil. and Ph.D. in Biostatistics from Columbia University. He recently completed a postdoctoral research appointment in the Department of Statistics at Texas A&M University, where he has been working on the development of hierarchical Bayesian modelling methods that integrate diverse imaging data and quantify prediction uncertainty focusing on brain images corresponding to neurocognitive disorders. With an aim to contribute to a better understanding of neurodegenerative diseases, he plans to develop deep learning modeling frameworks for analyzing multi-object data that exploits object topology while leveraging linkages among objects to perform inference, clustering and prediction thus allowing developmental neuroscientists to leverage existing multimodal imaging datasets.</td></tr>
-         </table></td>
-         <td style='text-align: right'><img src="../images/krish.jpeg" style='height: 300px'></td>
     </tr>
     <tr> 
         <td> <table style='border: 0px'><tr><th>Theyanesh Jayaprakash</th></tr>
@@ -547,17 +541,11 @@
          </table></td>
          <td style='text-align: right'><img src="../images/yumeng.jpeg" style='height: 350px'></td>
     </tr>
-     <tr> 
+      <tr> 
         <td> <table style='border: 0px'><tr><th>Anastasija Naumoski</th></tr>
         <tr><td>She holds a Bachelor of Science in Human Biology from Indiana University Bloomington and am currently entering her second year as a Master’s student in Bioinformatics at Indiana University Indianapolis. After completing my graduate studies, she plans to pursue a career as a clinical bioinformatician, where she can apply my training to support precision medicine and improve patient outcomes. </td></tr>
          </table></td>
          <td style='text-align: right'><img src="../images/ana.jpg" style='height: 350px'></td>
-    </tr>
-      <tr> 
-        <td> <table style='border: 0px'><tr><th>Ash Sharma</th></tr>
-        <tr><td>Ash has a background in computer science, with a bachelor's degree in the field and prior experience in several computational and data-focused internships, including a machine learning internship at Adsynthetica where he developed an end-to-end synthetic data pipeline. He is currently a second-year master's student in statistics at UIUC, working as a research assistant with Indiana University on modeling the reliability of neuroimaging data using a latent variable framework. Looking ahead, He plans to deepen my research experience in interdisciplinary, data-intensive problems as he pursues a Ph.D. in biostatistics or data science. </td></tr>
-         </table></td>
-         <td style='text-align: right'><img src="../images/ash.jpg" style='height: 350px'></td>
     </tr>
 </table>
 
