--- a/index.html
+++ b/index.html
@@ -571,34 +571,31 @@
     <br/></p>
 <p></span></p>
 <h2 id="news">News:</h2>
-<p>(August, 2025) Dr. Krishnendu Chandra has joined our team as postdoc in August 2025. Welcome!</p>
-<p>(July, 2025) Our paper <a href="https://arxiv.org/abs/2309.11349" target="_blank">Neuroimaging connectivity analysis needs network science for
-brain-behavior linking </a> has been accepted in <a href="https://www.nature.com/nmeth/" target="_blank">Nature Methods</a>. Congrats!</p>
-<p>(July, 2024) Connor presented poster <a href="images/connor_AAICPoster.pdf" target="_blank">Sex differences in structural connectivity-based AD
-pathology in the Indiana Memory and Aging cohort</a> at <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>. </p>
-<p>(July, 2024) Theyanesh presented poster <a href="images/the_poster.pdf" target="_blank">Deep Learning Framework for Characterizing Tau-PET Heterogeneity and Exploring Functional Connectivity in
-Alzheimer’s Disease: A Self-supervised Approach</a> at <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>. </p>
-<p>(June, 2025) Xinzhi's first author manuscript <a href="https://doi.org/10.1002/hbm.70260" target="_blank">Cost efficiency of fMRI studies using resting-state vs task-based functional connectivity </a> has been published in Human Brain Mapping. Congrats!</p>
-<p>(June, 2025) Congratulations to Connor who has been offered the competitive <a href="https://medicine.iu.edu/research-centers/computational-biology-bioinformatics/education/genomics-research-training" target="_blank">INGEN4DS fellowship</a>! great job!</p>
+<p>(August, 2025) Dr. Krishnendu Chandra has joined our team as a postdoc in August 2025. Welcome!</p>
+<p>(July, 2025) Our paper <a href="https://arxiv.org/abs/2309.11349" target="_blank">Neuroimaging connectivity analysis needs network science for brain-behavior linking</a> has been accepted in <a href="https://www.nature.com/nmeth/" target="_blank">Nature Methods</a>. Congrats!</p>
+<p>(July, 2025) <a href="https://www.linkedin.com/in/connor-cornelison-2a36422b2/" target="_blank">Connor Cornelison</a> presented the poster <a href="images/connor_AAICPoster.pdf" target="_blank">Sex differences in structural connectivity-based AD pathology in the Indiana Memory and Aging cohort</a> at the <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>.</p>
+<p>(July, 2025) <a href="https://www.linkedin.com/in/theyaneshj17" target="_blank">Theyanesh Jayaprakash</a> presented the poster <a href="images/the_poster.pdf" target="_blank">Deep Learning Framework for Characterizing Tau-PET Heterogeneity and Exploring Functional Connectivity in Alzheimer’s Disease: A Self-supervised Approach</a> at the <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>.</p>
+<p>(June, 2025) Xinzhi's first-author manuscript <a href="https://doi.org/10.1002/hbm.70260" target="_blank">Cost efficiency of fMRI studies using resting-state vs task-based functional connectivity</a> has been published in <em>Human Brain Mapping</em>. Congrats!</p>
+<p>(June, 2025) Congratulations to <a href="https://www.linkedin.com/in/connor-cornelison-2a36422b2/" target="_blank">Connor Cornelison</a>, who has been offered the competitive <a href="https://medicine.iu.edu/research-centers/computational-biology-bioinformatics/education/genomics-research-training" target="_blank">INGEN4DS fellowship</a>! Great job!</p>
 <p>(May, 2025) <a href="https://scholar.google.com/citations?user=Q3x0bgEAAAAJ&hl=en" target="_blank">Dr. Hongshan Liu</a> has joined our team as a postdoc in May 2025. Welcome!</p>
-<p>(May, 2025) Huairui Wang, Ash Sharma and Anastasija Naumoski have joined our team as graduate research interns beginning summer, 2025. Welcome!</p>
+<p>(May, 2025) <a href="https://www.linkedin.com/in/huairui-wang-34ba3926b/" target="_blank">Huairui Wang</a>, <a href="https://www.linkedin.com/in/ashdatapro/" target="_blank">Ash Sharma</a>, and <a href="https://www.linkedin.com/in/anastasija-naumoski-6599a2232/" target="_blank">Anastasija Naumoski</a> have joined our team as graduate research interns beginning summer 2025. Welcome!</p>
 <p>(May, 2025) Congratulations to Xinzhi Zhang who has accepted an offer from NYU to start her PhD! Well deserved!</p>
-<p>(April, 2025) Theyanesh has been awarded the 2025 AAIC conference fellowship award! Congrats!</p>
-<p>(March, 2025) New network science method review paper is published at <a href="https://psycnet.apa.org/record/2025-87910-001" target="_blank">Psychological Methods</a>. </p>
-<p>(February, 2025) Our team has been offered funding from  <a href="https://www.alzheimersdata.org" target="_blank">Alzheimer's Disease Data Initiative</a> to support Artificial Intelligence technology development for AD. </p>
-<p>(February, 2025) Dr. Wang is selected as a <a href="https://www.alzheimersdata.org/fellows" target="_blank">2025 William H. Gates Sr. Fellow</a>. </p>
-<p>(January, 2025) Connor, Theyanesh and Plamena have each submitted a first-author abstract to <a href="https://aaic.alz.org" target="_blank">AAIC 2025</a>. Congrats! </p>
-<p>(January, 2025) Visiting student Yumeng Chen have joined our lab. Welcome!</p>
-<p>(January, 2025) Dr. Wang is selected as a <a href="https://medicine.iu.edu/research-centers/alzheimers/for-researchers/funding/rec-scholar-program" target="_blank">2025 REC scholar</a>. </p>
-<p>(January, 2025) We received internal IU funding to support methodology development from the REC scholar program via <a href="https://medicine.iu.edu/research-centers/alzheimers" target="_blank">IADRC</a>. </p>
-<p>(January, 2025) New network science method review paper is accepted at <a href="https://arxiv.org/abs/2410.00301" target="_blank">Psychological Methods</a>.  </p>
-<p>(November, 2024) New paper is published at <a href="https://alz-journals.onlinelibrary.wiley.com/doi/full/10.1002/alz.14266" target="_blank">Alzheimer's &amp; Dementia</a>.  </p>
-<p>(November, 2024) Xinzhi's first-author preprint is out <a href="https://arxiv.org/abs/2411.01092" target="_blank">Cost efficiency of fMRI studies using resting-state vs task-based functional connectivity</a>. Congrats!</p>
-<p>(October, 2024) Plamena presented poster at 2024 IADRC Fall Research Symposium titled "The Relationship Between Tau Levels in Functionally Connected Cortical Brain Regions and a Region’s Tau Burden". Great Job!</p>
-<p>(October, 2024) New network science review preprint is out <a href="https://arxiv.org/abs/2410.00301" target="_blank">Network Science in Psychology</a>.  </p>
-<p>(October, 2024) New social network method preprint is out <a href="https://arxiv.org/abs/2409.19400" target="_blank">The co-varying ties between networks and item responses via latent variables</a>.  </p>
-<p>(August, 2024) New paper is published at <a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841524002342." target="_blank">Medical Image Analysis</a>.  </p>
-<p>(August, 2024) Dr. Wang presented poster <a href="images/poster1.pdf" target="_blank">Sex-specific topological structure associated with dementia identified via latent space network analysis</a> at <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>.  </p>
+<p>(April, 2025) <a href="https://www.linkedin.com/in/theyaneshj17" target="_blank">Theyanesh Jayaprakash</a> has been awarded the 2025 AAIC conference fellowship award! Congrats!</p>
+<p>(March, 2025) A new network science method review paper has been published in <a href="https://psycnet.apa.org/record/2025-87910-001" target="_blank">Psychological Methods</a>.</p>
+<p>(February, 2025) Our team has been offered funding from the <a href="https://www.alzheimersdata.org" target="_blank">Alzheimer's Disease Data Initiative</a> to support Artificial Intelligence technology development for AD.</p>
+<p>(February, 2025) Dr. Wang was selected as a <a href="https://www.alzheimersdata.org/fellows" target="_blank">2025 William H. Gates Sr. Fellow</a>.</p>
+<p>(January, 2025) <a href="https://www.linkedin.com/in/connor-cornelison-2a36422b2/" target="_blank">Connor Cornelison</a>, <a href="https://www.linkedin.com/in/theyaneshj17" target="_blank">Theyanesh Jayaprakash</a>, and Plamena each submitted a first-author abstract to <a href="https://aaic.alz.org" target="_blank">AAIC 2025</a>. Congrats!</p>
+<p>(January, 2025) Visiting student <a href="https://www.linkedin.com/in/yumeng-chen-29248128a/" target="_blank">Yumeng Chen</a> has joined our lab. Welcome!</p>
+<p>(January, 2025) Dr. Wang was selected as a <a href="https://medicine.iu.edu/research-centers/alzheimers/for-researchers/funding/rec-scholar-program" target="_blank">2025 REC scholar</a>.</p>
+<p>(January, 2025) We received internal IU funding to support methodology development from the REC scholar program via the <a href="https://medicine.iu.edu/research-centers/alzheimers" target="_blank">IADRC</a>.</p>
+<p>(January, 2025) A new network science method review paper was accepted at <a href="https://arxiv.org/abs/2410.00301" target="_blank">Psychological Methods</a>.</p>
+<p>(November, 2024) A new paper was published in <a href="https://alz-journals.onlinelibrary.wiley.com/doi/full/10.1002/alz.14266" target="_blank">Alzheimer's &amp; Dementia</a>.</p>
+<p>(November, 2024) Xinzhi's first-author preprint is out: <a href="https://arxiv.org/abs/2411.01092" target="_blank">Cost efficiency of fMRI studies using resting-state vs task-based functional connectivity</a>. Congrats!</p>
+<p>(October, 2024) Plamena presented a poster at the 2024 IADRC Fall Research Symposium titled "The Relationship Between Tau Levels in Functionally Connected Cortical Brain Regions and a Region’s Tau Burden". Great job!</p>
+<p>(October, 2024) A new network science review preprint is out: <a href="https://arxiv.org/abs/2410.00301" target="_blank">Network Science in Psychology</a>.</p>
+<p>(October, 2024) A new social network method preprint is out: <a href="https://arxiv.org/abs/2409.19400" target="_blank">The co-varying ties between networks and item responses via latent variables</a>.</p>
+<p>(August, 2024) A new paper was published in <a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841524002342" target="_blank">Medical Image Analysis</a>.</p>
+<p>(August, 2024) Dr. Wang presented a poster <a href="images/poster1.pdf" target="_blank">Sex-specific topological structure associated with dementia identified via latent space network analysis</a> at the <a href="https://aaic.alz.org" target="_blank">Alzheimer's Association International Conference</a>.</p>
 
 
 
