--- a/lab/index.html
+++ b/lab/index.html
@@ -507,57 +507,62 @@
 <table style='border: 0px'> 
     <tr> 
         <td style='width: 60%'> <table style='border: 0px'><tr><th>Dr. Hongshan Liu</th></tr>
-        <tr><td>Dr. Liu earned her Ph.D. in Biomedical Engineering from Stevens Institute of Technology. Currently, She’m developing AI methods to advance brain science and medical informatics. Looking ahead, She aims to design interpretable methodologies that uncover deeper insights across these domains.</td></tr>
+        <tr><td> <a href="https://scholar.google.com/citations?user=Q3x0bgEAAAAJ&hl=en" target="_blank">Dr. Hongshan Liu</a> earned her Ph.D. in Biomedical Engineering from Stevens Institute of Technology. Currently, she is developing AI methods to advance brain science and medical informatics. Looking ahead, she aims to design interpretable methodologies that uncover deeper insights across these domains.</td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/hongshan.jpg" style='height: 300px'></td>
+         <td style='text-align: right'><img src="../images/hongshan.jpg" style='height: 200px'></td>
     </tr>
     <tr> 
         <td style='width: 60%'> <table style='border: 0px'><tr><th>Dr. Krishnendu Chandra</th></tr>
-        <tr><td>Dr. Krishnendu Chandra received his M.Phil. and Ph.D. in Biostatistics from Columbia University. He recently completed a postdoctoral research appointment in the Department of Statistics at Texas A&M University, where he has been working on the development of hierarchical Bayesian modelling methods that integrate diverse imaging data and quantify prediction uncertainty focusing on brain images corresponding to neurocognitive disorders. With an aim to contribute to a better understanding of neurodegenerative diseases, he plans to develop deep learning modeling frameworks for analyzing multi-object data that exploits object topology while leveraging linkages among objects to perform inference, clustering and prediction thus allowing developmental neuroscientists to leverage existing multimodal imaging datasets.</td></tr>
+        <tr><td>Dr. Krishnendu Chandra received his M.Phil. and Ph.D. in Biostatistics from Columbia University. He recently completed a postdoctoral research appointment in the Department of Statistics at Texas A&M University, where he worked on developing hierarchical Bayesian modeling methods that integrate diverse imaging data and quantify prediction uncertainty, with a focus on brain images related to neurocognitive disorders. Aiming to contribute to a better understanding of neurodegenerative diseases, he plans to develop deep learning frameworks for analyzing multi-object data that exploit object topology while leveraging linkages among objects to enable inference, clustering, and prediction—thus empowering developmental neuroscientists to take full advantage of existing multimodal imaging datasets.</td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/krish.jpeg" style='height: 300px'></td>
+         <td style='text-align: right'><img src="../images/krish.jpg" style='height: 200px'></td>
     </tr>
     <tr> 
         <td> <table style='border: 0px'><tr><th>Theyanesh Jayaprakash</th></tr>
-        <tr><td>Theyanesh is pursuing a Master’s in data science from Indiana University Bloomington. Previously, he worked as a Senior Software Engineer at Optum, part of UnitedHealth Group, where he gained extensive experience in healthcare data analytics, focusing on data modeling, ETL processes, data warehousing, and visualization to create business-specific client reporting. As a Research Assistant, he is developing deep learning models to explore Alzheimer's disease, specifically analyzing atrophy patterns and disease progression. He aspires to contribute to mental health research and early cancer detection through sentiment analysis, emotion recognition, and anomaly detection. </td></tr>
+        <tr><td><a href="https://www.linkedin.com/in/theyaneshj17" target="_blank">Theyanesh Jayaprakash</a> is pursuing a master’s degree in Data Science at Indiana University Bloomington. Previously, he worked as a Senior Software Engineer at Optum, part of UnitedHealth Group, where he gained extensive experience in healthcare data analytics—focusing on data modeling, ETL processes, data warehousing, and visualization to support business-specific client reporting. As a research assistant, he is developing deep learning models to study Alzheimer’s disease, specifically analyzing atrophy patterns and disease progression. He aspires to contribute to mental health research and early cancer detection through sentiment analysis, emotion recognition, and anomaly detection. </td></tr>
+         <tr><td>
+        He received 2025 AAIC conference fellowship award. Check out his poster at AAIC 2025,  <a href="images/the_poster.pdf" target="_blank">Deep Learning Framework for Characterizing Tau-PET Heterogeneity and Exploring Functional Connectivity in Alzheimer’s Disease: A Self-supervised Approach</a>.
          </table></td>
-         <td style='text-align: right'><img src="../images/Theyaneshwaran.jpg" style='height: 300px'></td>
+         <td style='text-align: right'><img src="../images/Theyaneshwaran.jpg" style='height: 200px'></td>
     </tr>
     <tr> 
         <td> <table style='border: 0px'><tr><th>Connor Cornelison</th></tr>
-        <tr><td>Connor Cornelison is a first-year Data Science MS student at IU Bloomington, holding an undergraduate degree in Computer Science from Indiana University South Bend. He is currently researching sex-specific imaging biomarkers for Alzheimer's Disease, modeling using the ABC model. He plans to pursue a career in scientific computing, with a focus on AI-powered data processing. </td></tr>
+        <tr><td><a href="https://www.linkedin.com/in/connor-cornelison-2a36422b2/" target="_blank">Connor Cornelison</a> is a second-year M.S. student in Data Science at Indiana University Bloomington, holding a B.S. in Computer Science from Indiana University South Bend. He is currently researching sex-specific imaging biomarkers for Alzheimer’s disease, using the ABC model. He plans to pursue a career in scientific computing, with a focus on AI-powered data processing.
+        <tr><td>
+        He received <a href="https://medicine.iu.edu/research-centers/computational-biology-bioinformatics/education/genomics-research-training" target="_blank">INGEN4DS fellowship</a>. Check out his poster at AAIC 2025, <a href="images/connor_AAICPoster.pdf" target="_blank">Sex differences in structural connectivity-based AD pathology in the Indiana Memory and Aging cohort</a>. 
+         </td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/connor.jpg" style='height: 350px'></td>
+         <td style='text-align: right'><img src="../images/connor.jpg" style='height: 200px'></td>
     </tr>
     <tr> 
         <td> <table style='border: 0px'><tr><th>Huairui Wang</th></tr>
-        <tr><td>Huairui has a background in statistics, with a BSc from the University of Nottingham and is currently pursuing my MS in Applied Statistics at NYU. He is currently involved in research applying statistical network models to study age-related changes in brain connectivity across the human lifespan. In the future, he plans to pursue a PhD in statistics or biostatistics and continue conducting research at the intersection of health and high-dimensional data analysis. </td></tr>
+        <tr><td><a href="https://www.linkedin.com/in/huairui-wang-34ba3926b/" target="_blank">Huairui Wang</a> has a background in statistics, with a B.Sc. from the University of Nottingham, and is currently pursuing his M.S. in Applied Statistics at NYU. He is currently involved in research applying statistical network models to study age-related changes in brain connectivity across the human lifespan. In the future, he plans to pursue a Ph.D. in statistics or biostatistics and continue conducting research at the intersection of health and high-dimensional data analysis. </td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/huairui.JPG" style='height: 350px'></td>
+         <td style='text-align: right'><img src="../images/huairui.JPG" style='height: 200px'></td>
     </tr>
       <tr> 
         <td> <table style='border: 0px'><tr><th>Luling Zou</th></tr>
-        <tr><td>Luling is a second-year M.S. student in Biostatistics at Indiana University Bloomington, holding a B.S. in Applied Mathematics from Shanghai University. She is currently studying the spread of tau pathology across functional brain networks in Alzheimer’s disease by integrating PET imaging data with functional connectivity fMRI matrices, using co-evolution models to explore the interactions. She hopes to apply mathematical and statistical modeling, particularly subgraph detection techniques to problems in health research, with a focus on Alzheimer’s disease and autism spectrum disorders, and plans to pursue a career in academia. </td></tr>
+        <tr><td>Luling Zou is a second-year M.S. student in Biostatistics at Indiana University Bloomington, holding a B.S. in Applied Mathematics from Shanghai University. She is currently studying the spread of tau pathology across functional brain networks in Alzheimer’s disease by integrating PET imaging data with functional connectivity fMRI matrices, using co-evolution models to explore these interactions. She hopes to apply mathematical and statistical modeling—particularly subgraph detection techniques—to problems in health research, with a focus on Alzheimer’s disease and autism spectrum disorders, and plans to pursue a career in academia.</td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/luling.JPG" style='height: 350px'></td>
+         <td style='text-align: right'><img src="../images/luling.JPG" style='height: 200px'></td>
     </tr>
       <tr> 
         <td> <table style='border: 0px'><tr><th>Yumeng Chen</th></tr>
-        <tr><td>Yumeng have a background in biomedical engineering with research experience spanning neural interfaces, medical imaging, and computational biology. She is working on brain connectivity modeling and AI-based medical analysis. In the future, She hopes to pursue a PhD and develop intelligent medical technologies that support early diagnosis and personalized treatment for neurological and psychiatric disorders. </td></tr>
+        <tr><td><a href="https://www.linkedin.com/in/yumeng-chen-29248128a/" target="_blank">Yumeng Chen</a> has a background in biomedical engineering, with research experience spanning neural interfaces, medical imaging, and computational biology. She is working on brain connectivity modeling and AI-based medical analysis. In the future, she hopes to pursue a Ph.D. and develop intelligent medical technologies that support early diagnosis and personalized treatment for neurological and psychiatric disorders.</td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/yumeng.jpeg" style='height: 350px'></td>
+         <td style='text-align: right'><img src="../images/yumeng.jpeg" style='height: 200px'></td>
     </tr>
      <tr> 
         <td> <table style='border: 0px'><tr><th>Anastasija Naumoski</th></tr>
-        <tr><td>She holds a Bachelor of Science in Human Biology from Indiana University Bloomington and am currently entering her second year as a Master’s student in Bioinformatics at Indiana University Indianapolis. After completing my graduate studies, she plans to pursue a career as a clinical bioinformatician, where she can apply my training to support precision medicine and improve patient outcomes. </td></tr>
+        <tr><td><a href="https://www.linkedin.com/in/anastasija-naumoski-6599a2232/" target="_blank">Anastasija Naumoski</a> holds a Bachelor of Science in Human Biology from Indiana University Bloomington and is currently entering her second year as a master’s student in Bioinformatics at Indiana University Indianapolis. After completing her graduate studies, she plans to pursue a career as a clinical bioinformatician, where she can apply her training to support precision medicine and improve patient outcomes. </td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/ana.jpg" style='height: 350px'></td>
+         <td style='text-align: right'><img src="../images/ana.jpg" style='height: 200px'></td>
     </tr>
       <tr> 
         <td> <table style='border: 0px'><tr><th>Ash Sharma</th></tr>
-        <tr><td>Ash has a background in computer science, with a bachelor's degree in the field and prior experience in several computational and data-focused internships, including a machine learning internship at Adsynthetica where he developed an end-to-end synthetic data pipeline. He is currently a second-year master's student in statistics at UIUC, working as a research assistant with Indiana University on modeling the reliability of neuroimaging data using a latent variable framework. Looking ahead, He plans to deepen my research experience in interdisciplinary, data-intensive problems as he pursues a Ph.D. in biostatistics or data science. </td></tr>
+        <tr><td><a href="https://www.linkedin.com/in/ashdatapro/" target="_blank">Ash Sharma</a> has a background in computer science, with a bachelor's degree in the field and prior experience in several computational and data-focused internships, including a machine learning internship at Adsynthetica, where he developed an end-to-end synthetic data pipeline. He is currently a second-year master's student in statistics at UIUC, working as a research assistant with Indiana University on modeling the reliability of neuroimaging data using a latent variable framework. Looking ahead, he plans to deepen his research experience in interdisciplinary, data-intensive problems as he pursues a Ph.D. in biostatistics or data science. </td></tr>
          </table></td>
-         <td style='text-align: right'><img src="../images/ash.jpg" style='height: 350px'></td>
+         <td style='text-align: right'><img src="../images/ash.jpg" style='height: 200px'></td>
     </tr>
 </table>
 
